added translations to the drawer

--- a/app/locale/de/common.json
+++ b/app/locale/de/common.json
@@ -1,2 +1,9 @@
 {
+  "user": {
+    "role": {
+      "trainer": "Trainer",
+      "player": "Spieler",
+      "contactPerson": "Bezugsperson"
+    }
+  }
 }
