--- a/app/locale/en/common.json
+++ b/app/locale/en/common.json
@@ -1,2 +1,9 @@
 {
+  "user": {
+    "role": {
+      "trainer": "Trainer",
+      "player": "Player",
+      "contactPerson": "Contact person"
+    }
+  }
 }
