#22 added message for showing users if they don't have future events

--- a/app/locale/de/event.json
+++ b/app/locale/de/event.json
@@ -1,3 +1,7 @@
 {
-  "title": "Events"
+  "title": "Events",
+  "noEvents": {
+    "title": "Keine Veranstaltungen",
+    "description": "In diesem Team gibt es keine zukünftige Veranstaltungen."
+  }
 }
